# rust-oids

./: .gitignore  .project  .rustfmt.toml  CMakeLists.txt  Cargo.toml  README.md  TODO.md  build.rs  cargo_wrapper.bat  rustfmt.toml
.cargo/: config
examples/: audio_test.rs
launch/: rust-oids-clippy.launch  rust-oids-debug.launch  rust-oids.launch
lib/x64/: Box2D.lib  freetype.lib  portaudio.lib
resources/: 20160919_172906.csv  20161021_212828.csv  20161021_212841.csv  20171021_012656.csv  20171021_013444.csv  20171108_213134.csv  20171108_213206.csv  20171108_215201.csv  20171108_215210.csv  20171108_215228.csv  20171108_215716.csv  20171108_215800.csv  20171108_215817.csv  20171108_215859.csv  20171108_220110.csv  20171108_220139.csv  20171108_220350.csv  20171108_220413.csv  20171108_220428.csv  20171108_220515.csv  20171108_220545.csv  20171108_234754.csv  20171108_234902.csv  20171108_235041.csv  20171108_235149.csv  20171108_235217.csv  20171108_235637.csv  20171109_000054.csv  20171110_001111.csv  20171112_235344.csv  20171112_235751.csv  20171113_214407.csv  20171113_232803.csv  20171113_232933.csv  20171113_232953.csv  20171113_233443.csv  20171113_233811.csv  20171113_234237.csv  20171115_001436.csv  20171116_200007.csv  (+248 more)
resources/shaders/effects/: clip_luminance.frag  compose_2.frag  exponential_smooth.frag  exposure_tone_map.frag  gaussian_blur_horizontal.frag  gaussian_blur_vertical.frag  identity.vert  luminance.vert  luminance_vertex.vert  msaa4x_resolve.frag  quad_smooth.frag  simple_blit.frag
resources/shaders/forward/: lighting.vert  lighting_ball.frag  lighting_flat.frag  lighting_poly.frag  lighting_stage.frag  point_ball.geom  ripple_particle.frag  triangle_edge.geom  unlit.vert
src/: main.rs  render.rs  shaders.rs
src/app/: capture.rs  constants.rs  controller.rs  ev.rs  events.rs  input.rs  main.rs  mainloop.rs  mod.rs  obj.rs  paint.rs  systems.rs  view.rs  winit_event.rs  world.rs
src/app/systems/: animation.rs  mod.rs  physics.rs
src/backend/: mod.rs  obj.rs  smooth.rs  world.rs
src/backend/messagebus/: mod.rs
src/backend/systems/: ai.rs  alife.rs  animation.rs  audio.rs  game.rs  messagebus.rs  mod.rs  particle.rs  physics.rs
src/backend/world/: agent.rs  alert.rs  gen.rs  mod.rs  notification.rs  particle.rs  persist.rs  phen.rs  segment.rs  swarm.rs
src/core/: clock.rs  color.rs  geometry.rs  math.rs  mod.rs  resource.rs  util.rs  view.rs
src/frontend/: gfx_window_glutin.rs  mod.rs
src/frontend/audio/: mod.rs  multiplexer.rs
src/frontend/color/: mod.rs
src/frontend/input/: gamepad.rs  mod.rs
src/frontend/render/: effects.rs  formats.rs  forward.rs  mod.rs
src/frontend/ui/: conrod_gfx.rs  conrod_ui.rs  mod.rs  theme.rs
src/render/: blit.rs  effects.rs  forward.rs  mod.rs
src/resource/: mod.rs
