cmake_minimum_required(VERSION 3.8)
project(rust_oids)

set(CMAKE_CXX_STANDARD 11)

set(SOURCE_FILES
        img/screenshot_001.png
        img/screenshot_002.png
        img/screenshot_003.png
        img/screenshot_004.png
        img/screenshot_005.png
        img/screenshot_006.png
        img/screenshot_007.png
        img/screenshot_008.png
        resources/shaders/effects/clip_luminance.frag
        resources/shaders/effects/compose_2.frag
        resources/shaders/effects/exponential_smooth.frag
        resources/shaders/effects/exposure_tone_map.frag
        resources/shaders/effects/gaussian_blur_horizontal.frag
        resources/shaders/effects/gaussian_blur_vertical.frag
        resources/shaders/effects/identity.vert
        resources/shaders/effects/luminance.vert
        resources/shaders/effects/msaa4x_resolve.frag
        resources/shaders/effects/quad_smooth.frag
        resources/shaders/effects/simple_blit.frag
        resources/shaders/forward/lighting.vert
        resources/shaders/forward/lighting_flat.frag
        resources/shaders/forward/lighting_poly.frag
        resources/shaders/forward/point_ball.geom
        resources/20160919_172906.csv
        resources/20161021_212828.csv
        resources/20161021_212841.csv
        resources/minion_gene_pool.csv
        resources/minion_gene_pool_runcorn.csv
        resources/snake.csv
        resources/snakes.csv
        src/app/main.rs
        src/app/mod.rs
        src/backend/systems/ai.rs
        src/backend/systems/alife.rs
        src/backend/systems/animation.rs
        src/backend/systems/game.rs
        src/backend/systems/mod.rs
        src/backend/systems/physics.rs
        src/backend/world/agent.rs
        src/backend/world/gen.rs
        src/backend/world/mod.rs
        src/backend/world/phen.rs
        src/backend/world/segment.rs
        src/backend/world/swarm.rs
        src/backend/mod.rs
        src/backend/obj.rs
        src/core/clock.rs
        src/core/color.rs
        src/core/geometry.rs
        src/core/math.rs
        src/core/mod.rs
        src/core/resource.rs
        src/core/util.rs
        src/frontend/input/mod.rs
        src/frontend/render/effects.rs
        src/frontend/render/forward.rs
        src/frontend/render/mod.rs
        src/frontend/mod.rs
        src/main.rs
        Cargo.lock
        Cargo.toml
        LICENSE
        README.md
        rust-oids.iml
        TODO.md)

add_executable(rust_oids ${SOURCE_FILES})