[package]
name = "rust-oids"
version = "0.10.0"
authors = [
	"norru <nigu.orru@gmail.com>"
]

[features]
default = []
profiler = []

[[bin]]
name = "rust-oids"
path = "src/main.rs"

[dependencies]
num ="*"
num-traits="*"
log="*"
itertools = "*"
log4rs = "*"
cgmath="*"
rand = "*"
chrono="*"
enum_primitive="*"
bitflags="1.0.1"
bit-set="*"
csv = "*"
rustc-serialize="*"
image = "*"
wrapped2d = "*"
gfx = "0.17.1"
gfx_core = "0.8.2"
gfx_device_gl = "0.15.0"
#sound
sample="*"
pitch_calc="*"
portaudio="*"

#sys
ctrlc = "*"
getopts = "*"
cpuprofiler = "*"
rayon = "*"

#serialization
serde = "*"
serde_derive = "*"
serde_json = "*"

#gui
gl="*"
winit = "0.10.0"
glutin = "0.12.2"
conrod = { features = ["winit"], version = "0.58.0" }
#conrod = { features = ["winit"], git = "https://github.com/itadinanta/conrod", branch = "branch/winit_0.10.0" }

#
gilrs = "*"

#
[target.'cfg(unix)'.dependencies]
thread-priority = "*"
