[package]
name = "rust-oids"
version = "0.11.0"
readme = "README.md"
description = "A Rust-based A-life playground"
license = "Apache 2.0"
authors = [
	"Nico Orru <nigu.orru@gmail.com>"
]

[features]
default = []
profiler = []

[[bin]]
name = "rust-oids"
path = "src/main.rs"

[dependencies]
num ="*"
num-traits="*"
log="*"
itertools = "*"
log4rs = "*"
cgmath="*"
rand = "0.3"
chrono="*"
enum_primitive="*"
bitflags="1.0.1"
bit-set="*"
csv = "0.15"
rustc-serialize="*"
image = "*"
wrapped2d = "0.4.0"
gfx = "0.17.1"
gfx_core = "0.8.2"
gfx_device_gl = "0.15.0"
#sound
sample="*"
pitch_calc="*"
portaudio="*"

#sys
ctrlc = "*"
dirs = "*"
getopts = "*"
cpuprofiler = "*"
rayon = "*"

#serialization
serde = "*"
serde_derive = "*"
serde_json = "*"

#gui
winit = "0.10.0"
glutin = "0.12.0"
conrod = { features = ["winit"], version = "0.58.0" }
#conrod = { features = ["winit"], git = "https://github.com/itadinanta/conrod", branch = "branch/winit_0.10.0" }

#controller
gilrs = "*"

#
[target.'cfg(unix)'.dependencies]
thread-priority = "*"

[package.metadata.deb]
maintainer = "Nico Orru <nigu.orru@gmail.com>"
copyright = "2016-2018, Nico Orru <nigu.orru@gmail.com>"
license-file = ["LICENSE", "4"]
extended-description = """A Rust-based A-life playground. \
https://github.com/itadinanta/rust-oids"""
depends = "$auto,libbox2d2.3.0,libportaudio2,libasound2,libudev1"
section = "games"
priority = "optional"
assets = [
	["target/release/rust-oids", "usr/bin/", "755"],
	["resources/minion_gene_pool.csv", "usr/share/rust-oids/resources/", "644"],
	["resources/fonts/*", "usr/share/rust-oids/resources/fonts/", "644"],
	["resources/shaders/effects/*", "usr/share/rust-oids/resources/shaders/effects/", "644"],
	["resources/shaders/forward/*", "usr/share/rust-oids/resources/shaders/forward/", "644"],
	["README.md", "usr/share/doc/rust-oids/", "644"],
	["TODO.md", "usr/share/doc/rust-oids/", "644"],
	["LICENSE", "usr/share/doc/rust-oids/", "644"],
]